# CloudLakeX

./: .gitignore  README.md
assets/: pyproject.toml
assets/code/: ivySettings.xml  pyspark-job.py  run-pyspark.sh
assets/notebooks/: lakehouse_part0_data_generation.ipynb  lakehouse_part0_data_generation.py  lakehouse_part1_load_data.ipynb  lakehouse_part1_load_data.py  lakehouse_part2_spark_processing.ipynb  lakehouse_part2_spark_processing.py  lakehouse_part3_time_series_forecasting.ipynb  lakehouse_part3_time_series_forecasting.py
terraform/: bq.tf  build.tf  cloudrun.tf  gcs.tf  iam.tf  kafka.tf  main.tf  script.tf  variables.tf  versions.tf  vpc.tf
terraform/scripts/: copy-data.sh
webapp/: .pre-commit-config.yaml  Dockerfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
webapp/buses-dashboard/: bq_service.py  kafka_service.py  main.py  pyspark_service.py  token_provider.py
webapp/buses-dashboard/static/css/: style.css
webapp/buses-dashboard/static/src/: input.css
webapp/buses-dashboard/templates/: base.html  index.html
