# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "cloudlakex-assets"
version = "0.1.0"
description = "These notebooks contains parts of the CloudLakeX open data lakehouse demo"
requires-python = ">=3.11"
dependencies = [
    "dataproc-spark-connect>=0.7.4",
    "faker>=37.11.0",
    "fastavro>=1.12.1",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-storage>=3.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pyspark>=4.0.1",
    "sodapy>=2.2.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "jupytext>=1.18.1",
    "nbstripout>=0.8.1",
]

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"
